Fix layout issues in curation.

--- a/assets/scss/curation.scss
+++ b/assets/scss/curation.scss
@@ -40,4 +40,8 @@ $o-forms-is-silent: false;
 	z-index: 5;
 }
 
+.alphaville-curation-char-limit-save {
+	margin-top: 12px;
+}
+
 @import './components/article-list';
